Get correct alignment @large

--- a/css/app.css
+++ b/css/app.css
@@ -14755,19 +14755,19 @@ body {
   }
 }
 
+@media print, screen and (min-width: 64em) {
+  .round-top-section .p {
+    max-width: 20rem;
+  }
+}
+
 .round-top-section .prose-wrap {
   margin-bottom: 2rem;
 }
 
-@media screen and (min-width: 62.5em) {
+@media print, screen and (min-width: 64em) {
   .round-top-section .prose-wrap {
-    padding: 0 2rem;
-  }
-}
-
-@media screen and (min-width: 68.75em) {
-  .round-top-section .prose-wrap {
-    padding: 0 2rem 0 4rem;
+    float: left;
   }
 }
 
@@ -14780,6 +14780,12 @@ body {
 @media print, screen and (min-width: 40em) {
   .round-top-section .vendor-logos {
     max-width: none;
+  }
+}
+
+@media print, screen and (min-width: 64em) {
+  .round-top-section .vendor-logos {
+    text-align: unset;
   }
 }
 
@@ -14816,6 +14822,12 @@ body {
   }
 }
 
+@media print, screen and (min-width: 64em) {
+  .round-top-section .logo-wrap#bader-ranch {
+    padding: 0 1rem 0 0;
+  }
+}
+
 .round-top-section .logo-wrap#excess-field {
   margin-bottom: 2rem;
 }
@@ -14838,8 +14850,20 @@ body {
   max-width: 240px;
 }
 
+@media print, screen and (min-width: 64em) {
+  .round-top-section img.bader-ranch-logo {
+    max-width: 220px;
+  }
+}
+
 .round-top-section img.round-top-compound-logo {
   max-width: 220px;
+}
+
+@media print, screen and (min-width: 64em) {
+  .round-top-section img.round-top-compound-logo {
+    max-width: 200px;
+  }
 }
 
 #masonryGrid .tile .tileBase {
