--- a/scss/pages/index/_round-top.scss
+++ b/scss/pages/index/_round-top.scss
@@ -16,8 +16,8 @@
 			max-width: rem-calc(420);
 		}
 
-		@include breakpoint(960) {
-			// max-width: rem-calc(320);
+		@include breakpoint(large) {
+			max-width: rem-calc(320);
 		}
 	}
 
@@ -30,12 +30,16 @@
 		}
 
 		@include breakpoint(1000) {
-			padding: 0 rem-calc(32);
+			// padding: 0 rem-calc(32);
 		}
 
-		@include breakpoint(1100) {
-			padding: 0 rem-calc(32) 0 rem-calc(64);
+		@include breakpoint(large) {
+			float: left;
 		}
+
+		// @include breakpoint(1100) {
+		// 	padding: 0 rem-calc(32) 0 rem-calc(64);
+		// }
 	}
 
 	.vendor-logos {
@@ -45,6 +49,10 @@
 
 		@include breakpoint(medium) {
 			max-width: none;
+		}
+
+		@include breakpoint(large) {
+			text-align: unset;
 		}
 	}
 
@@ -61,9 +69,9 @@
 			margin-bottom: 0;
 		}
 
-		@include breakpoint(960) {
+		// @include breakpoint(960) {
 			// padding: 0 rem-calc(32) 0 0;
-		}
+		// }
 	}
 
 	.logo-wrap#bader-ranch {
@@ -78,6 +86,10 @@
 			// padding: 0 rem-calc(32) 0 0;
 			// padding: 0;
 			padding: 0 rem-calc(32);
+		}
+
+		@include breakpoint(large) {
+			padding: 0 rem-calc(16) 0 0;
 		}
 	}
 
@@ -100,9 +112,17 @@
 
 	img.bader-ranch-logo {
 		max-width: 240px;
+
+		@include breakpoint(large) {
+			max-width: 220px;
+		}
 	}
 
 	img.round-top-compound-logo {
 		max-width: 220px;
+
+		@include breakpoint(large) {
+			max-width: 200px;
+		}
 	}
 }
